# genmount

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: check_public_terms.py
src/genmount/: __init__.py  __main__.py  api.py  auth.py  cli.py  config.py  errors.py  ollama.py  sanitize.py
src/genmount/commands/: __init__.py  chat.py  doctor.py  init.py  sync.py  upgrade.py
tests/: test_api.py  test_auth.py  test_cli.py  test_config.py  test_ollama.py  test_sanitize.py  test_sync_install.py
