[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genmount"
version = "0.1.0"
description = "Genmount OS client — user-side CLI for local + cloud inference."
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
authors = [{ name = "DOORM AI PTE. LTD.", email = "service@doorm.ai" }]
keywords = ["genmount", "doorm", "tcm", "cli", "ai", "ollama"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Healthcare Industry",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer>=0.12",
    "platformdirs>=4.0",
    "ollama>=0.3",
    "cryptography>=42.0",
    "httpx>=0.27",
    "tomli-w>=1.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://genmount.com"
Organization = "https://doorm.ai"

[project.scripts]
genmount = "genmount.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/genmount"]

# sdist 排除开发/元文件（CLAUDE.md 等绝不进用户装的包；README/LICENSE 保留）
[tool.hatch.build.targets.sdist]
exclude = [
  "/CLAUDE.md",
  "/.github",
  "/dist",
  "/tests",
  "/scripts",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
# third-party libs without bundled stubs (ollama / platformdirs / tomli_w)
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
